--- a/html/index.html
+++ b/html/index.html
@@ -4,7 +4,7 @@
     <style>
       body {
         margin: 0;
-        background: linear-gradient(-45deg, #a6a6a6, #5ac05a, #262626, #a6a6a6);
+        background: linear-gradient(-45deg, #a6a6a6, #b951b9, #262626, #a6a6a6);
         background-size: 400% 400%;
         animation: gradient 15s ease infinite;
         height: 100vh;
